html and scss is done

--- a/Main.scss
+++ b/Main.scss
@@ -1,5 +1,7 @@
 @import url('style-scss/header.scss');
 @import url('style-scss/homeSection.scss');
+@import url('style-scss/filmSection.scss');
+@import url('style-scss/footer.scss');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Press+Start+2P&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
