--- a/style-scss/header.scss
+++ b/style-scss/header.scss
@@ -11,6 +11,7 @@
         padding-left: 2rem;
         font-size: 30px;
         color: red;   
+        cursor: pointer;
     }
 
     .headerNavbarLinks {
@@ -23,14 +24,23 @@
 
         .searchIcon{
             display: none;
+            cursor: pointer;
         }
 
         .notificationIcon{
             display: none;
+            cursor: pointer;
         }
 
         .profile{
             display: none;
+            cursor: pointer;
+        }
+
+        @media (min-width: 1024px) {
+            >*  {
+                margin-right: 1rem;
+            }
         }
     }
 
@@ -49,6 +59,7 @@
 
             > * {
                 margin-left: 12px;
+                cursor: pointer;
             }
             }
         }
