--- a/style-scss/footer.scss
+++ b/style-scss/footer.scss
@@ -4,6 +4,7 @@ footer{
     background-color: black;
     display: flex;
     justify-content: center;
+    border-top: 1px solid rgba(255, 255, 255, 0.115);
 
     .footerContainer{
         width: 100%;
