--- a/Main.scss
+++ b/Main.scss
@@ -8,14 +8,13 @@
 // font-family: 'Bebas Neue', cursive;
 // font-family: 'PT Serif', serif;
 
-* {
-    margin: 0;
-    padding: 0;
+*, *::after , *::before {
     box-sizing: border-box;
-
 }
 
 body{
+    margin: 0;
+    padding: 0;
     font-family: 'PT Serif', serif;
 }
 
