--- a/style-scss/footer.scss
+++ b/style-scss/footer.scss
@@ -38,9 +38,9 @@ footer{
         .language{
             border: solid 1px white;
             width: 8rem;
-            padding: 1rem 1rem;
             display: flex;
-            justify-content: space-between;     
+            justify-content: space-around;     
+            align-items: center;
             margin-top: 3rem;  
             cursor: pointer;
         }
