popUp is halvway done

--- a/style-scss/homeSection.scss
+++ b/style-scss/homeSection.scss
@@ -26,8 +26,9 @@
 
         #heroBannerName{
             margin: 4rem 0;
-            font-size: 55px;
+            font-size: 35px;
             color: white;
+            width: 60%;
         }
         
         .homeSectionButtons{
