--- a/Main.scss
+++ b/Main.scss
@@ -4,6 +4,7 @@
 @import url('style-scss/footer.scss');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Press+Start+2P&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('style-scss/popUp.scss');
 
 // font-family: 'Bebas Neue', cursive;
 // font-family: 'PT Serif', serif;
@@ -16,6 +17,11 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'PT Serif', serif;
+   
+}
+
+article{
+    width: 100%;
 }
 
 .hide{
