searchbar design done

--- a/style-scss/footer.scss
+++ b/style-scss/footer.scss
@@ -21,6 +21,10 @@ footer{
                 margin-right: 2rem;
                 font-size: 25px;
                 cursor: pointer;
+                transition: 250ms;
+                &:hover{
+                    color: red;
+                } 
             }
         }
 
@@ -31,7 +35,11 @@ footer{
             > * {
                 margin-bottom: 1rem;
                 text-decoration: none;
-                color: white;   
+                color: white;  
+                transition: 150ms;
+                &:hover{
+                    color: red;
+                } 
             }
         }
 
@@ -43,6 +51,13 @@ footer{
             align-items: center;
             margin-top: 3rem;  
             cursor: pointer;
+            
+            p{
+                transition: 150ms;
+                &:hover{
+                    color: red;
+                } 
+            }
         }
 
         @media (min-width: 768px) {
