--- a/style-scss/header.scss
+++ b/style-scss/header.scss
@@ -16,6 +16,7 @@
 
     .headerNavbarLinks {
         display: none;
+
     }
 
     .headerNavbar{
@@ -31,13 +32,11 @@
             display: none;
             cursor: pointer;
             
-            
-                    
             #searchInput{
                 width: 15rem;
                 height: 2rem;
-                border: 1px solid rgb(255, 255, 255) ;
-                background-color: rgb(0, 0, 0);
+                border: 0.5px solid rgb(255, 255, 255) ;
+                background-color: #00000081;
                 color: white;
                 border-radius: 1px;
                 position: absolute;
@@ -47,6 +46,18 @@
                 padding: 0 10px;
                 font-size: 15px;
                 font-family: 'PT Serif', serif;
+            }
+            .searchInputButton{
+                position: absolute;
+                height: 2rem;
+                top: 1rem;
+                right : 10rem;
+                background-color: #00000081;
+                color: white;
+                border: 0.5px solid rgb(255, 255, 255) ;
+                cursor: pointer;
+                transition: 250ms;
+
             }
         }
 
@@ -58,6 +69,7 @@
         .profile{
             display: none;
             cursor: pointer;
+            
         }
 
         @media (min-width: 1024px) {
@@ -84,6 +96,10 @@
             > * {
                 margin-left: 12px;
                 cursor: pointer;
+                transition: 250ms;
+                &:hover{
+                    color: red;
+                }
             }
             }
         }
@@ -110,6 +126,7 @@
                     right: 10.5rem;
                 }
                 
+                
             }
 
             .notificationIcon{
@@ -117,11 +134,19 @@
             }
 
             .profile{
-                display: unset;
+                display: flex;
                 width: 50px;
                 height: 50px;
                 border-radius: 50%;
                 background-color: yellow;
+                color: red;
+                font-size: 20px;
+                font-weight: bold;
+                align-items: center;
+                justify-content: center;
+                text-shadow: 0 0 8px 0px  black;
+                
+
             }
         }
 
