--- a/Main.scss
+++ b/Main.scss
@@ -5,6 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Press+Start+2P&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('style-scss/popUp.scss');
+@import url('style-scss/searchResult.scss');
 
 // font-family: 'Bebas Neue', cursive;
 // font-family: 'PT Serif', serif;
