--- a/style-scss/searchResult.scss
+++ b/style-scss/searchResult.scss
@@ -12,6 +12,9 @@
     height: auto;
     background-color: black;    
     padding-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     .searchResultContainer{
         padding: 2rem;
@@ -31,5 +34,42 @@
         }
     }
 
+    .pageButtonsContainer{
+        height: 2.5rem;
+        display: flex;
+        gap: 1rem;
+        
+
+        .rightButton , .leftButton{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: black;
+            font-size: 20px;
+            width: 1.8rem;
+            height: 2rem;
+            font-weight: bold;
+            background-color: white;
+            cursor: pointer;
+            transition: 250ms;
+
+            &:hover{
+                background-color: rgba(240, 248, 255, 0.514);
+            }
+        }
+
+        .pageActuelleNumber{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 20px;
+            color: white;
+            font-weight: bold;
+            transition: 250ms;
+            
+        }
+    }
+
 
 }
+
